@@ -1,4 +1,5 @@
 0.02
+ - Add support for length with blank string.
 
 0.01 2023-11-18T01:17:56+01:00
  - First version.
